Epic 2- transaction (#29)
* Implemented EPIC-2 (transactions). Also updated swagger and postman documentation.

* added notes.md file

* Updated transaction route

* Implemented unit and integration test for transaction

---------
